[tool.poetry]
name = "2022.08.23 test - dimatech"
version = "0.1.0"
description = ""
authors = ["Alinocco <alinoco.dia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = {extras = ["ext"], version = "^22.6.2"}
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
